syntax = "proto3";

option go_package = "/internal/pkg/genproto";

package protos;

import "muallimah-submodule/protos/common.proto";
import "muallimah-submodule/protos/users_course.proto";


service CertificateService {
    rpc CreateCertificate(ById) returns (Void);
    rpc GetCertificate(ById) returns (CertificateGet);
    rpc UpdateCertificate(CertificateUpdate) returns (Void);
    rpc DeleteCertificate(ById) returns (Void);
    rpc ListCertificates(CertificateFilter) returns (CertificateList);
}
message CertificateGet {
    string Id = 1;
    UserCourse UserCourse = 2;
    string Status = 3;
    string file_url = 4;
}
message CertificateUpt {
    string Status = 1;
    string file_url = 2;
}
message CertificateUpdate {
    string Id = 1;
    CertificateUpt Body = 2;
}
message CertificateFilter {
    string UserId = 1;
    string CourseId = 2;
    string Status = 3;
    Pagination Filter = 4;
}
message CertificateList {
    repeated CertificateGet Items = 1;
    int32 TotalCount = 2;
    Pagination Pagination = 3;
}